Add link to Formula on marketing page
Me every time I want to know if Homebrew has a given package:
- http://lmgtfy.com/?q=homebrew+mac&l=1
- Click: "Fork me on GitHub"
- Click: "Library"
- Click: "Formula"

Now we have a one-click step to discovering what Homebrew can
install direct from the homepage. W00t!

Closes #18349.

Signed-off-by: Jack Nagel <jacknagel@gmail.com>

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li>
             <div class="group row">
               <div class="col-1">
-                <p>Homebrew installs the stuff you need that Apple didn’t.</p>
+                <p>Homebrew installs <a href="https://github.com/mxcl/homebrew/tree/master/Library/Formula" title="List of Homebrew packages">the stuff you need</a> that Apple didn’t.</p>
               </div>
               <div class="col-2">
                 <pre><code><span style="color: #e3d796;">$</span> brew install wget</code></pre>
