--- a/index_zh-cn.html
+++ b/index_zh-cn.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <title>Homebrew — MacPorts driving you to drink? Try Homebrew!</title>
+    <title>Homebrew — MacPorts让您崩溃不?试试Homebrew吧!</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="dc.creator" content="Rémi Prévost - http://exomel.com" />
     <link rel="stylesheet" href="./css/screen.css" type="text/css" media="screen" />
@@ -24,8 +24,8 @@
     <div id="wrap">
       <div id="header">
         <h1><a href="./">Homebrew</a></h1>
-        <p id="subtitle"><strong>The missing package manager for OS X</strong></p>
-        <p>English Version | <a href="index_zh-cn.html">中文版</a></p>
+        <p id="subtitle"><strong>OS X系统缺失的组件管理工具</strong></p>
+        <p><a href="index.html">English Version</a> | 中文版</p>
       </div>
 
       <div id="informations">
@@ -33,7 +33,7 @@
           <li>
             <div class="group row">
               <div class="col-1">
-                <p>Homebrew installs <a href="https://github.com/mxcl/homebrew/tree/master/Library/Formula" title="List of Homebrew packages">the stuff you need</a> that Apple didn’t.</p>
+                <p>使用Homebrew安装苹果系统没有但是<a href="https://github.com/mxcl/homebrew/tree/master/Library/Formula" title="List of Homebrew packages">您需要的东西</a></p>
               </div>
               <div class="col-2">
                 <pre><code><span style="color: #e3d796;">$</span> brew install wget</code></pre>
@@ -43,7 +43,7 @@
           <li>
             <div class="group row">
               <div class="col-1">
-                <p>Homebrew installs packages to their own directory and then symlinks their files into <code>/usr/local</code>.</p>
+                <p>Homebrew将packages安装在它们自己的目录里, 然后symlink到<code>/usr/local</code>下.</p>
               </div>
               <div class="col-2">
                 <pre><code><span style="color: #e3d796;">$</span> cd /usr/local
@@ -61,14 +61,14 @@ bin/wget -&gt; ../Cellar/wget/1.12/bin/wget</code></pre>
           <li>
             <div class="group row">
               <div class="col-1">
-                <p>Homebrew won’t install files outside its prefix, and you can place a Homebrew installation wherever you like.</p>
+                <p>Homebrew不会在它prefix定义的目录之外存放任何文件, 所以, 您可以将Homebrew安装在任何想要安装到地方.</p>
               </div>
             </div>
           </li>
           <li>
             <div class="group row">
               <div class="col-1">
-                <p>Trivially create your own Homebrew packages.</p>
+                <p>创建您自己的Homebrew packages是非常容易的一件事.</p>
               </div>
               <div class="col-2">
                 <pre><code><span style="color: #e3d796;">$</span> brew create http://foo.com/bar-1.0.tgz
@@ -80,7 +80,7 @@ Created /usr/local/Library/Formula/bar.rb
           <li>
             <div class="group row">
               <div class="col-1">
-                <p>It's all git and ruby underneath, so hack away with the knowledge that you can easily revert your modifications and merge upstream updates.</p>
+                <p>完全基于git和ruby实现, 您可以很方便的撤销更改或合并来自upstream的更新.</p>
               </div>
               <div class="col-2">
                 <pre><code><span style="color: #e3d796;">$</span> brew edit wget <span style="color: #666;"># opens in $EDITOR!</span></code></pre>
@@ -90,7 +90,7 @@ Created /usr/local/Library/Formula/bar.rb
           <li>
             <div class="group row">
               <div class="col-1">
-                <p>Homebrew formula are simple Ruby scripts:</p>
+                <p>Homebrew的formula都是简单的ruby脚本:</p>
               </div>
               <div class="col-2">
                 <pre class="overflow"><code><span style="color: #8a9597;">require</span> <span style="color: #c2c98f;">'</span><span style="color: #a2a96f;">formula</span><span style="color: #c2c98f;">'</span>
@@ -111,29 +111,29 @@ Created /usr/local/Library/Formula/bar.rb
           <li>
             <div class="group row">
               <div class="col-1">
-                <p>Homebrew complements OS X. Install your gems with <code>gem</code>, and their dependencies with <code>brew</code>.</p>
+                <p>Homebrew是对OS X的补充. 使用<code>gem</code>来安装您的gems, 而它的依赖可以使用<code>brew</code>来安装.</p>
               </div>
             </div>
           </li>
 
           <li>
             <div class="group row">
-              <h2>Install Homebrew</h2>
+              <h2>安装Homebrew</h2>
               <pre style='clear:both;text-align:center;margin:0 -3em;margin-bottom:0.9em'><code id='selectable' onclick="selectText()">ruby -e &quot;$(curl -fsSL https://raw.github.com/mxcl/homebrew/go)&quot;</code></pre>
               <div class="col-1">
-                <p>Paste that at a Terminal prompt.</p>
+                <p>打开Terminal, 粘贴上面的语句.</p>
               </div>
               <div class="col-2">
-                <p>The script explains what it will do and then pauses before it does it. There are more installation options <a href='https://github.com/mxcl/homebrew/wiki/Installation'>here</a> (needed on 10.5).
+                <p>该脚本首先将会解释它要做什么, 然后暂停下来, 直到您确认继续. 更多的安装选项在<a href='https://github.com/mxcl/homebrew/wiki/Installation'>这里</a>可以看到 (需要10.5).
               </div>
             </div>
           </li>
 
           <li>
             <div class="group row">
-              <h2>Further Documentation</h2>
+              <h2>更进一步的文档</h2>
               <div class="button">
-                <p><a href="https://github.com/mxcl/homebrew/wiki">Homebrew Wiki</a></p>
+                <p><a href="https://github.com/mxcl/homebrew/wiki">Homebrew Wiki</a> (翻译中)</p>
               </div>
             </div>
           </li>
