add language navigation

--- a/index_zh-cn.html
+++ b/index_zh-cn.html
@@ -25,6 +25,7 @@
       <div id="header">
         <h1><a href="./">Homebrew</a></h1>
         <p id="subtitle"><strong>OS X系统缺失的组件管理工具</strong></p>
+        <p><a href="index.html">English Version</a> | 中文版</p>
       </div>
 
       <div id="informations">
