--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="header">
         <h1><a href="./">Homebrew</a></h1>
         <p id="subtitle"><strong>The missing package manager for OS X</strong></p>
-        <p>English Version | <a href="index_zh-cn.html">中文版</a></p>
+        <p>English Version | <a href="index_zh-cn.html">中文版</a> | <a href="index-es.html">Versión en Español</a></p>
       </div>
 
       <div id="informations">
