--- a/index_fr-fr.html
+++ b/index_fr-fr.html
@@ -131,7 +131,7 @@ Created /usr/local/Library/Formula/bar.rb
 
           <li>
             <div class="group row">
-              <h2>Documentation supplémentaire</h2>
+              <h2>Documentation additionnelle</h2>
               <div class="button">
                 <p><a href="https://github.com/mxcl/homebrew/wiki">Wiki de Homebrew</a></p>
               </div>
