--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="header">
         <h1><a href="./">Homebrew</a></h1>
         <p id="subtitle"><strong>The missing package manager for OS X</strong></p>
-        <p>English Version | <a href="index_fr-fr.html">Version Francaise</a> | <a href="index_zh-cn.html">简体中文版</a> | <a href="index_zh-tw.html">繁體中文版</a></p>
+        <p>English | <a href="index_es-es.html">Español</a> | <a href="index_fr-fr.html">Français</a> | <a href="index_zh-cn.html">简体中文</a> | <a href="index_zh-tw.html">繁體中文</a></p>
       </div>
 
       <div id="informations">
