In French, the "c" in "Version Française" takes a cedilla

--- a/index_fr-fr.html
+++ b/index_fr-fr.html
@@ -25,7 +25,7 @@
       <div id="header">
         <h1><a href="./">Homebrew</a></h1>
         <p id="subtitle"><strong>Le gestionnaire package pour OS X</strong></p>
-        <p><a href="index.html">English Version</a> | Version Francaise | <a href="index_zh-cn.html">简体中文版</a> | <a href="index_zh-tw.html">繁體中文版</a></p>
+        <p><a href="index.html">English Version</a> | Version Française | <a href="index_zh-cn.html">简体中文版</a> | <a href="index_zh-tw.html">繁體中文版</a></p>
       </div>
 
       <div id="informations">
@@ -140,7 +140,7 @@ Created /usr/local/Library/Formula/bar.rb
 
           <li>
             <div class="group row credits">
-              <p>Code original par <a href="http://methylblue.com/">Max Howell</a>. Site web par <a href="http://exomel.com">Rémi Prévost</a>. Traduction francaise par <a href="http://twitter.com/louim">Louis-Michel Couture</a></p>
+              <p>Code original par <a href="http://methylblue.com/">Max Howell</a>. Site web par <a href="http://exomel.com">Rémi Prévost</a>. Traduction française par <a href="http://twitter.com/louim">Louis-Michel Couture</a></p>
             </div>
           </li>
         </ul>
