In French, the "c" in "Version Française" takes a cedilla
Closes #18953.

Signed-off-by: Jack Nagel <jacknagel@gmail.com>

--- a/index_fr-fr.html
+++ b/index_fr-fr.html
@@ -22,5 +22,5 @@ pagecontent:
   foot:
     code: Code original par <a href="http://methylblue.com/">Max Howell</a>.
     page: Site web par  <a href="http://exomel.com">Rémi Prévost</a>.
-    translation: Traduction francaise par <a href="http://twitter.com/louim">Louis-Michel Couture</a>.
+    translation: Traduction française par <a href="http://twitter.com/louim">Louis-Michel Couture</a>.
 ---
