Fix for language codes and Spanish
http://www.w3.org/International/articles/language-tags/ "The golden rule
when creating language tags is to keep the tag as short as possible.
Avoid region, script or other subtags except where they add useful
distinguishing information."

Closes #18984.

Signed-off-by: Jack Nagel <jacknagel@gmail.com>

--- a/index_es.html
+++ b/index_es.html
@@ -1,6 +1,6 @@
 ---
 layout: index
-lang: es-es
+lang: es
 title: Homebrew — ¿MacPorts te lleva a la bebida? ¡Prueba Homebrew!
 subtitle: El gestor de paquetes para OS X que faltaba
 
@@ -9,7 +9,7 @@ pagecontent:
   how: Homebrew instala cada paquete en su propio directorio, creando enlaces simbólicos a sus archivos dentro de  <code>/usr/local</code>.
   prefix: Homebrew nunca instala archivos fuera de su prefijo, y puedes colocar la instalación de Homebrew donde quieras.
   createpackages: Crear tus propios paquetes de Homebrew no puede ser más fácil.
-  hack: Homebrew está basado únicamente en Git y Ruby: ya puedes desarrollar tranquilo, con la seguridad de que podrás deshacer tus cambios e integrar actualizaciones con total facilidad.
+  hack: "Homebrew está basado únicamente en Git y Ruby: ya puedes desarrollar tranquilo, con la seguridad de que podrás deshacer tus cambios e integrar actualizaciones con total facilidad."
   formula: "Las fórmulas de Homebrew son simples <i>scripts</i> en Ruby:"
   complement: Homebrew complementa OS X. Instala tus <i>gems</i> con <code>gem</code> y sus dependencias con <code>brew</code>.
   install:
