--- a/index_fr.html
+++ b/index_fr.html
@@ -1,6 +1,6 @@
 ---
 layout: index
-lang: fr-fr
+lang: fr
 title: Homebrew — MacPorts vous rend agressif ? Essayez Homebrew !
 subtitle: Le gestionnaire package pour OS X
 
